Closed Bug 170027 Opened 22 years ago Closed 22 years ago

Can't drag URL proxy icon to a empty Bookmarks toolbar

Categories

(Camino Graveyard :: Drag & Drop, defect)

PowerPC
macOS
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: chrispetersen, Assigned: sfraser_bugs)

References

Details

Attachments

(1 file)

Build: 2002-09-20-04
Platform: OS X 10.2
Expected Results: Dragging a url proxy icon to toolbar should create a bookmark
What I got: Bookmark isn't created but many copies of proxy icon gets painted on
screen.

Steps to reproduce:

1) Create a empty Bookmark toolbar by either deleting all toolbar bookmarks or
moving them a different folder (in sidebar)
2) After this has been done, drag a proxy icon to the empty bookmark toolbar
3) Notice that no bookmark is created on toolbar. If you continue to drag ,
multiple copies of the proxy icon are painted. See attachment.
Attached image screen shot
This isn't just proxy icons. Dragging page links or items from the sidebar to
the empty bookmarks toolbar displays the same problem. Tested under 10.2.1.
Status: NEW → ASSIGNED
*** Bug 170481 has been marked as a duplicate of this bug. ***
*** Bug 167855 has been marked as a duplicate of this bug. ***
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Verified in the 2002-10-03-04 NB.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: