Fix bug 170027 -- bad behaviour dragging to empty bookmarks toolbar.